--- a/index.html
+++ b/index.html
@@ -133,7 +133,8 @@
 							<!-- Menu -->
 								<nav id="menu">
 									<header class="major">
-										<h2>Home</h2>
+									     <img src="images/logo.png" alt="" style="width: 60px; height: auto;" />
+
 									</header>
 									<ul>
 										<li><a href="index.html">Home</a></li>
