--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 											</h1>
 											
 										</header>
-										<p>A qualified, analytical, and experienced data analyst with skills in data analysis, statistical modeling, data visualization to create reports based on data driven insights along with excellent communication and management skills. </br></br>
+										<p>A qualified and experienced data analyst with skills in data engineering, data analysis, statistical modeling, data visualization to create reports based on data driven insights along with excellent communication and management skills. </br></br>
 											I have a strong attention to detail, excellent problem-solving skills, and a collaborative approach to work. I am also committed to continuous learning and staying up to date with the latest trends and technologies in the field.</br></br>
 											 I am excited to connect with potential employers, collaborate on projects and open to any opportunities (freelancing projects, volunteering) that make a meaningful impact. </br>
 											Please feel free to contact me with any questions or to learn more about how I can contribute to your team.
@@ -139,7 +139,7 @@
 									<ul>
 										<li><a href="index.html">Home</a></li>
 										<li><a href="#Portfolio Projects">Portfolio Projects</a></li>
-										<li><a href=" /SANJIB RESUME.pdf" target="_blank">Resume</a></li>
+										<li><a href=" /Sanjib.pdf" target="_blank">Resume</a></li>
 									</ul>
 								</nav>
 
