--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 									<ul>
 										<li><a href="index.html">Home</a></li>
 										<li><a href="#Portfolio Projects">Portfolio Projects</a></li>
-										<li><a href=" /Sanjib.pdf" target="_blank">Resume</a></li>
+										<li><a href=" /Sanjib RESUME.pdf" target="_blank">Resume</a></li>
 									</ul>
 								</nav>
 
@@ -168,7 +168,7 @@
 
 							<!-- Footer -->
 								<footer id="footer">
-									<p class="copyright">&copy; 2023 Sanjib Adhikari. All rights reserved.</p>
+									<p class="copyright">&copy; 2025 Sanjib Adhikari. All rights reserved.</p>
 								</footer>
 
 						</div>
