--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 									<ul>
 										<li><a href="index.html">Home</a></li>
 										<li><a href="#Portfolio Projects">Portfolio Projects</a></li>
-										<li><a href=" /Sanjib RESUME.pdf" target="_blank">Resume</a></li>
+										<li><a href=" /Sanjib.pdf" target="_blank">Resume</a></li>
 									</ul>
 								</nav>
 
@@ -185,3 +185,4 @@
 
 	</body>
 </html>
+
