--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 									<ul>
 										<li><a href="index.html">Home</a></li>
 										<li><a href="#Portfolio Projects">Portfolio Projects</a></li>
-										<li><a href=" /Sanjib.pdf" target="_blank">Resume</a></li>
+										<li><a href="/https://drive.google.com/file/d/18mebJmBUU8lzmzXjfD00u13Ig5s8LeIo/view?usp=sharing" target="_blank">Resume</a></li>
 									</ul>
 								</nav>
 
