--- a/powerbiscreenshot.html
+++ b/powerbiscreenshot.html
@@ -199,10 +199,10 @@
   <section>
     <h2 style="text-align:center; margin-top:1rem;">PowerBI Project Screenshots</h2>
     <div class="gallery">
-      <img src="images/gallery/Analysis of housevaluedata.PNG" alt="Dashboard 1">
-      <img src="images/gallery/Home_page.PNG" alt="Dashboard 2">
-      <img src="images/gallery/Analysis of Rentalvaluedata.PNG" alt="SSMS Flow">
-      <img src="images/gallery/schooldata_ssrs_link.PNG" alt="SSRS Report">
+      <img src="images/Analysis of housevaluedata.PNG" alt="Dashboard 1">
+      <img src="images/Home_page.PNG" alt="Dashboard 2">
+      <img src="images/Analysis of Rentalvaluedata.PNG" alt="SSMS Flow">
+      <img src="images/schooldata_ssrs_link.PNG" alt="SSRS Report">
     </div>
   </section>
 
@@ -277,3 +277,4 @@
 </script>
 </body>
 </html>
+
